# crawl-boi

./: Cargo.toml  README.md
crawl-boi-cli/: Cargo.toml  README.md
crawl-boi-cli/src/: args.rs  main.rs  output.rs
crawl-boi-core/: Cargo.toml  README.md
crawl-boi-core/src/: crawler.rs  fetcher.rs  js_fetcher.rs  lib.rs  parser.rs  robots.rs  scope.rs  types.rs
