[package]
name = "crawl-boi-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crawl-boi"
path = "src/main.rs"

[dependencies]
crawl-boi-core = { path = "../crawl-boi-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
proptest = "1"
