[package]
name = "crawl-boi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
url = { version = "2.5.8", features = ["serde"] }
scraper = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

[features]
js-rendering = []

[dev-dependencies]
proptest = "1"
